c2/covenant-lh/covenant-statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: covenant-lh
  namespace: c2
  labels:
    app: covenant-lh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: covenant-lh
  serviceName: covenant-lh
  template:
    metadata:
      labels:
        app: covenant-lh
    spec:
      containers:
      - image: 10.233.29.197:5000/covenant
   #   - image: kalilinux/kali-rolling
        name: covenant-lh
        imagePullPolicy: Always
        command: ["dotnet"]
        args: ["/app/Covenant.dll"]
        ports:
          - name: cov-lh-web
            protocol: TCP
            containerPort: 80
          - name: cov-lh-https
            protocol: TCP
            containerPort: 443
        volumeMounts:
          - mountPath: "/app/Data"
            name: covenant-lh-data
      volumes:
      - name: covenant-lh-data
  volumeClaimTemplates:
    - metadata:
        name: covenant-lh-data
        labels:
          app: covenant-lh
      spec:
        accessModes: [ "ReadWriteOnce"]
        storageClassName: rook-ceph-block-x2
        resources:
          requests:
            storage: "16Gi"
